src/gui/text/qtextdocumentfragment.cpp
@@ -488,7 +488,8 @@ void QTextHtmlImporter::import()
          *      means there was a tag closing in the input html
          */
         if (currentNodeIdx > 0 && (currentNode->parent != currentNodeIdx - 1)) {
-            blockTagClosed = closeTag();
+            const bool lastBlockTagClosed = closeTag();
+            blockTagClosed = blockTagClosed || lastBlockTagClosed;
             // visually collapse subsequent block tags, but if the element after the closed block tag
             // is for example an inline element (!isBlock) we have to make sure we start a new paragraph by setting
             // hasBlock to false.
@@ -540,6 +541,7 @@ void QTextHtmlImporter::import()
 
             appendBlock(block, currentNode->charFormat);
 
+            blockTagClosed = false;
             hasBlock = true;
         }
 
